[workspace]
resolver = "3"

members = [
	"bspsuite-buildtasks",
	"bspsuite-core",
	"bspsuite-compiler",
	"bspsuite-ext-goldsrc",
	"bspsuite-extinterface"
]

[workspace.package]
version = "0.1.0"
authors = ["NoodleCollie <noodle.collie@protonmail.com>"]
documentation = "https://example.com/bar"
edition = "2024"
