[package]
name = "bspsuite-compiler"
description = "BSPSuite compiler executable"

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[[bin]]
name = "bspc"
path = "src/bspc.rs"

[dependencies]
bspsuite-core = { path = "../bspsuite-core" }
clap = { version = "4.5.51", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
