[package]
name = "bspsuite-compiler"
description = "BSPSuite compiler executable"

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[[bin]]
name = "bspc"
path = "src/bspc.rs"

[dependencies]
bspsuite-core = { path = "../bspsuite-core" }
clap = { version = "4.5.51", features = ["derive"] }
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.28"
paris = { version = "1.5.15", features = ["macros", "no_logger"] }
strum = { version = "0.27.2", features = ["derive"] }
lazy_static = "1.5.0"
