[package]
name = "bspsuite-core"
description = "Core algorithms for the BSPSuite compiler"

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
name = "bspcore"
crate-type = ["rlib", "dylib"]

[dependencies]
glam = "0.30.9"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
