[package]
name = "bspsuite-ext-goldsrc"
description = "Routines used for compiling maps for games based on the GoldSrc engine."

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
name = "goldsrcext"
# This is a cdylib since it's 100% dynamically loaded,
# so we can't guarantee a particular Rust ABI.
crate-type = ["cdylib"]

[dependencies]
bspsuite-core = { path = "../bspsuite-core" }
log = "0.4.28"
logos = "0.15.1"
