[package]
name = "bspsuite-ext-goldsrc"
description = "Routines used for compiling maps for games based on the GoldSrc engine."

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
name = "goldsrcext"
# This is a cdylib since it's 100% dynamically loaded,
# so we can't guarantee a particular Rust ABI.
crate-type = ["cdylib"]

[dependencies]
bspsuite-extinterface = { path = "../bspsuite-extinterface" }
log = { version = "0.4.28", features = ["std"] }
logos = "0.15.1"
